--- a/UI/hire-my-services/src/app/provider/provider-appointments/provider-appointments.component.scss
+++ b/UI/hire-my-services/src/app/provider/provider-appointments/provider-appointments.component.scss
@@ -29,3 +29,32 @@ x .checked {
 .size {
     font-size: 20px;
 }
+
+.serviceTitle {
+    margin: 12px;
+    color: #3f51b5;
+    font-family: 'Quicksand-bold';
+}
+
+.title {
+    margin: 10px;
+}
+
+.icon {
+    color: #dc1868;
+    position: relative;
+    top: 2px;
+}
+
+.fontFamily {
+    font-family: 'Quicksand-Semibold';
+}
+
+.filterBox {
+    color: #3f51b5;
+    font-family: 'Quicksand-bold';
+}
+
+.header-icon {
+    color: #dc1868;
+}
