--- a/UI/hire-my-services/src/app/provider/provider-profile/provider-profile.component.scss
+++ b/UI/hire-my-services/src/app/provider/provider-profile/provider-profile.component.scss
@@ -2,17 +2,15 @@ mat-card {
     max-width: 400px;
     margin: 2em auto;
     text-align: center;
-    font-family: 'Quicksand';
+    font-family: 'Quicksand-Semibold';
 }
 
 mat-form-field {
     display: block;
-    color: white;
-    font-family: 'Quicksand';
+    font-family: 'Quicksand-Semibold';
 }
 
 .skillset {
-    border: solid 1px whitesmoke;
     padding: 10px;
     margin-bottom: 20px;
 }
@@ -22,7 +20,10 @@ mat-form-field {
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
+    border-radius: 50%;
+    border: 3px solid #3f51b5;
+}
+
+.fontFamily {
+    font-family: 'Quicksand-bold';
 }
